# HelloWorldCpp

./: CMakeLists.txt
beispielAbgucken/: CMakeLists.txt  beispielAbgucken.cpp  beispielAbgucken.h
